* Added "OrthancPluginCreateJob2()" in the plugin SDK to avoid
  possible crashes when "OrthancPluginJobGetContent()" or
  "OrthancPluginJobGetSerialized()" get called

Maintenance
-----------

* Fix decoding of RLE images for which the "Planar Configuration" tag (0028,0006) equals 1
* Fix issue #212 (Anonymization process transcodes data and loses resource link).

version 1.11.2 (2022-08-30)
===========================

General
-------

* Added support for RGBA64 images in tools/create-dicom and /preview
* New configuration "MaximumStorageMode" to choose between recyling of
  old patients (default behavior) and rejection of new incoming data when
  the MaximumStorageSize has been reached.

Bug Fixes
---------

* Fix the "Never" option of the "StorageAccessOnFind" that was sill accessing
  files (bug introduced in 1.11.0).
* Fix the Storage Cache for compressed files (bug introduced in 1.11.1).

Maintenance
-----------

* DelayedDeletion plugin: Fix leaking of symbols
* SQLite now closes and deletes WAL and SHM files on exit.  This should improve
  handling of SQLite DB over network drives.
* Fix static compilation of boost 1.69 on Ubuntu 22.04
* Upgraded dependencies for static builds:
  - boost 1.80.0
  - dcmtk 3.6.7  (fixes CVE-2022-2119 and CVE-2022-2120)
  - openssl 3.0.5


Version 1.11.1 (2022-06-30)
===========================

General
-------

* New sample plugin: "DelayedDeletion" that will delete files from disk
  asynchronously to speed up deletion of large studies.
* Lua: new "SetHttpTimeout" function
* Lua: new "OnHeartBeat" callback called at regular interval provided that
       you have configured "LuaHeartBeatPeriod" > 0.
* "ExtraMainDicomTags" configuration now accepts Dicom Sequences.  Sequences are
  stored in a dedicated new metadata "MainDicomSequences".  This should improve
  DicomWeb QIDO-RS and avoid warnings like "Accessing Dicom tags from storage when 
  accessing series : 0040,0275".