@@ -53,6 +53,8 @@ Maintenance
 
 * Fix decoding of RLE images for which the "Planar Configuration" tag (0028,0006) equals 1
 * Fix issue #212 (Anonymization process transcodes data and loses resource link).
+* Enforce the existence of the patient/study/instance while creating its archive
+
 
 version 1.11.2 (2022-08-30)
 ===========================
